fixed the lil' lay out issue of the anchors in the footer on mobile, added a bit of margin

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -298,6 +298,7 @@
       padding-left: 34px;
       margin-right: 24px;
       position: relative;
+      margin-bottom: 17px;
       &:before {
         content: "";
         @include translateY;
